--- a/10_DOM_events/3_Event_listener.html
+++ b/10_DOM_events/3_Event_listener.html
@@ -10,6 +10,8 @@
     <button>Click Me 2</button>
     <button>Click Me 3</button>
     <button>Click Me 4</button>
+
+    <p>This is a paragraph</p>
     <script src="3_Event_listener.js"></script>
 </body>
 </html>
