--- a/10_DOM_events/6_form_events.html
+++ b/10_DOM_events/6_form_events.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <form action="/action">
-        <input type="text" placeholder="enter username">
+        <input type="text" placeholder="enter username" id="user">
+        <input type="password" placeholder="enter password" id="pass">
         <button>Register</button>
     </form>
     <script src="6_form_events.js"></script>
